z-index fix

--- a/src/components/Switcher.css
+++ b/src/components/Switcher.css
@@ -1,124 +1,124 @@
 .switcher {
-	z-index: 5;
-	display: flex;
-	flex-direction: row;
-	position: fixed;
-	align-items: center;
-	right: -316px;
-	top: 50%;
-	transform: translateY(-50%);
-	transition: 0.6s ease-in-out;
-	min-width: 2px;
-	min-height: 2px;
+    z-index: 75;
+    display: flex;
+    flex-direction: row;
+    position: fixed;
+    align-items: center;
+    right: -316px;
+    top: 50%;
+    transform: translateY(-50%);
+    transition: 0.6s ease-in-out;
+    min-width: 2px;
+    min-height: 2px;
 }
 
 .big,
 .small {
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	transition: 0.6s ease-in-out;
-	border: 1px solid white;
-	color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: 0.6s ease-in-out;
+    border: 1px solid white;
+    color: white;
 }
 
 .small {
-	position: absolute;
-	right: 300px;
-	z-index: 5;
-	cursor: pointer;
-	height: 40px;
-	width: 55px;
-	/* background-color: #ddd; */
-	border-radius: 10px;
-	font-weight: 700;
-	font-size: 20px;
-	border-right: none;
-	border-bottom-right-radius: 2px;
-	border-top-right-radius: 2px;
+    position: absolute;
+    right: 300px;
+    z-index: 5;
+    cursor: pointer;
+    height: 40px;
+    width: 55px;
+    /* background-color: #ddd; */
+    border-radius: 10px;
+    font-weight: 700;
+    font-size: 20px;
+    border-right: none;
+    border-bottom-right-radius: 2px;
+    border-top-right-radius: 2px;
 }
 
 span {
-	display: block;
-	transition: 0.6s ease-in-out;
-	transform: translateX(-10px);
+    display: block;
+    transition: 0.6s ease-in-out;
+    transform: translateX(-10px);
 }
 
 .small span {
-	width: 20px;
+    width: 20px;
 }
 
 .rotate {
-	transform: rotate(-180deg) translateX(20px);
+    transform: rotate(-180deg) translateX(20px);
 }
 
 .big {
-	position: absolute;
-	right: 15px;
-	height: 500px;
-	width: 300px;
-	/* background-color: #ddd; */
-	border-top-left-radius: 15px;
-	border-bottom-left-radius: 15px;
+    position: absolute;
+    right: 15px;
+    height: 500px;
+    width: 300px;
+    /* background-color: #ddd; */
+    border-top-left-radius: 15px;
+    border-bottom-left-radius: 15px;
 }
 
 .opened {
-	transform: translateX(-300px);
+    transform: translateX(-300px);
 }
 
 .palette-wrapper {
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .nav-wrapper,
 .controls-wrapper {
-	margin: 16px 0;
-	display: flex;
-	justify-content: space-between;
-	width: 200px;
+    margin: 16px 0;
+    display: flex;
+    justify-content: space-between;
+    width: 200px;
 }
 
 .nav-btn,
 .controls-btn {
-	width: 80px;
-	border: 1px solid white;
-	border-radius: 15px;
+    width: 80px;
+    border: 1px solid white;
+    border-radius: 15px;
 }
 
 .nav-btn {
-	background-color: black;
-	color: white;
+    background-color: black;
+    color: white;
 }
 
 .edit {
-	background-color: red;
-	color: white;
+    background-color: red;
+    color: white;
 }
 
 .new {
-	background-color: blue;
-	color: white;
+    background-color: blue;
+    color: white;
 }
 
 .index {
-	text-align: center;
-	margin: 8px 0;
+    text-align: center;
+    margin: 8px 0;
 }
 
 .nav-wrapper {
-	margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .help-button {
-	border: none;
-	position: absolute;
-	left: 15px;
-	bottom: 15px;
-	width: 25px;
-	height: 25px;
-	background-color: white;
-	color: #333;
-	border-radius: 25px;
+    border: none;
+    position: absolute;
+    left: 15px;
+    bottom: 15px;
+    width: 25px;
+    height: 25px;
+    background-color: white;
+    color: #333;
+    border-radius: 25px;
 }
